feat: prepare template rendering